; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_falcon_boards.c_sfe4001_poweroff.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/sfc/extr_falcon_boards.c_sfe4001_poweroff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.efx_nic = type { i32 }
%struct.i2c_client = type { i32 }
%struct.TYPE_2__ = type { %struct.i2c_client*, %struct.i2c_client* }

@P0_OUT = common dso_local global i32 0, align 4
@P1_CONFIG = common dso_local global i32 0, align 4
@P0_CONFIG = common dso_local global i32 0, align 4
@MAX664X_REG_RSL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.efx_nic*)* @sfe4001_poweroff to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sfe4001_poweroff(%struct.efx_nic* %0) #0 {
  %2 = alloca %struct.efx_nic*, align 8
  %3 = alloca %struct.i2c_client*, align 8
  %4 = alloca %struct.i2c_client*, align 8
  store %struct.efx_nic* %0, %struct.efx_nic** %2, align 8
  %5 = load %struct.efx_nic*, %struct.efx_nic** %2, align 8
  %6 = call %struct.TYPE_2__* @falcon_board(%struct.efx_nic* %5)
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 1
  %8 = load %struct.i2c_client*, %struct.i2c_client** %7, align 8
  store %struct.i2c_client* %8, %struct.i2c_client** %3, align 8
  %9 = load %struct.efx_nic*, %struct.efx_nic** %2, align 8
  %10 = call %struct.TYPE_2__* @falcon_board(%struct.efx_nic* %9)
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load %struct.i2c_client*, %struct.i2c_client** %11, align 8
  store %struct.i2c_client* %12, %struct.i2c_client** %4, align 8
  %13 = load %struct.i2c_client*, %struct.i2c_client** %3, align 8
  %14 = load i32, i32* @P0_OUT, align 4
  %15 = call i32 @i2c_smbus_write_byte_data(%struct.i2c_client* %13, i32 %14, i32 255)
  %16 = load %struct.i2c_client*, %struct.i2c_client** %3, align 8
  %17 = load i32, i32* @P1_CONFIG, align 4
  %18 = call i32 @i2c_smbus_write_byte_data(%struct.i2c_client* %16, i32 %17, i32 255)
  %19 = load %struct.i2c_client*, %struct.i2c_client** %3, align 8
  %20 = load i32, i32* @P0_CONFIG, align 4
  %21 = call i32 @i2c_smbus_write_byte_data(%struct.i2c_client* %19, i32 %20, i32 255)
  %22 = load %struct.i2c_client*, %struct.i2c_client** %4, align 8
  %23 = load i32, i32* @MAX664X_REG_RSL, align 4
  %24 = call i32 @i2c_smbus_read_byte_data(%struct.i2c_client* %22, i32 %23)
  ret void
}

declare dso_local %struct.TYPE_2__* @falcon_board(%struct.efx_nic*) #1

declare dso_local i32 @i2c_smbus_write_byte_data(%struct.i2c_client*, i32, i32) #1

declare dso_local i32 @i2c_smbus_read_byte_data(%struct.i2c_client*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
